--- a/notebooks/01-initial-exploration.ipynb
+++ b/notebooks/01-initial-exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,9 +43,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       1985-01-07\n",
+       "1       1985-01-07\n",
+       "2       1985-01-07\n",
+       "3       1985-01-07\n",
+       "4       1985-01-07\n",
+       "           ...    \n",
+       "25355   1999-03-02\n",
+       "25356   1999-03-02\n",
+       "25357   1999-03-02\n",
+       "25358   1999-03-02\n",
+       "25359   1999-03-02\n",
+       "Name: dob, Length: 25360, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#results_with_dob_date['ageAtRace'] = pd.to_datetime(results_with_dob_date['date']) - pd.to_datetime(results_with_dob_date['dob'])\n",
     "pd.to_datetime(results_with_dob_date['date'])\n",
@@ -54,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +271,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/ww/g01k38ln5rx5dm_b_qtwpdkc0000gn/T/ipykernel_14952/3250733558.py:2: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "  qualifying['q1'] = qualifying['q1'].str.replace('.',':')\n",
+      "/var/folders/ww/g01k38ln5rx5dm_b_qtwpdkc0000gn/T/ipykernel_14952/3250733558.py:3: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "  qualifying['q2'] = qualifying['q2'].str.replace('.',':')\n",
+      "/var/folders/ww/g01k38ln5rx5dm_b_qtwpdkc0000gn/T/ipykernel_14952/3250733558.py:4: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "  qualifying['q3'] = qualifying['q3'].str.replace('.',':')\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Formating qualifying times\n",
+    "qualifying['q1'] = qualifying['q1'].str.replace('.',':')\n",
+    "qualifying['q2'] = qualifying['q2'].str.replace('.',':')\n",
+    "qualifying['q3'] = qualifying['q3'].str.replace('.',':')\n",
+    "\n",
+    "qualifying[['q1', 'q2', 'q3']] = qualifying[['q1', 'q2', 'q3']].applymap(lambda x: pd.to_timedelta(x, errors='coerce'))\n",
+    "\n",
+    "qualifying['bestLap'] = qualifying[['q1','q2','q3']].min(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,25 +315,356 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>qualifyId</th>\n",
+       "      <th>raceId</th>\n",
+       "      <th>driverId</th>\n",
+       "      <th>constructorId</th>\n",
+       "      <th>number</th>\n",
+       "      <th>position</th>\n",
+       "      <th>q1</th>\n",
+       "      <th>q2</th>\n",
+       "      <th>q3</th>\n",
+       "      <th>bestLap</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0 days 01:35:32</td>\n",
+       "      <td>0 days 01:28:07</td>\n",
+       "      <td>0 days 01:37:54</td>\n",
+       "      <td>0 days 01:28:07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>18</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0 days 01:36:04</td>\n",
+       "      <td>0 days 01:32:32</td>\n",
+       "      <td>0 days 01:28:19</td>\n",
+       "      <td>0 days 01:28:19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>25</td>\n",
+       "      <td>19</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0 days 01:38:47</td>\n",
+       "      <td>0 days 01:46:39</td>\n",
+       "      <td>0 days 01:46:13</td>\n",
+       "      <td>0 days 01:38:47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>26</td>\n",
+       "      <td>19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0 days 01:41:32</td>\n",
+       "      <td>0 days 01:44:27</td>\n",
+       "      <td>0 days 01:47:49</td>\n",
+       "      <td>0 days 01:41:32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>47</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0 days 01:44:30</td>\n",
+       "      <td>0 days 01:46:22</td>\n",
+       "      <td>0 days 01:37:52</td>\n",
+       "      <td>0 days 01:37:52</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    qualifyId  raceId  driverId  constructorId  number  position  \\\n",
+       "0           1      18         1              1      22         1   \n",
+       "2           3      18         5              1      23         3   \n",
+       "24         25      19         5              1      23         3   \n",
+       "25         26      19         1              1      22         4   \n",
+       "46         47      20         1              1      22         3   \n",
+       "\n",
+       "                q1              q2              q3         bestLap  \n",
+       "0  0 days 01:35:32 0 days 01:28:07 0 days 01:37:54 0 days 01:28:07  \n",
+       "2  0 days 01:36:04 0 days 01:32:32 0 days 01:28:19 0 days 01:28:19  \n",
+       "24 0 days 01:38:47 0 days 01:46:39 0 days 01:46:13 0 days 01:38:47  \n",
+       "25 0 days 01:41:32 0 days 01:44:27 0 days 01:47:49 0 days 01:41:32  \n",
+       "46 0 days 01:44:30 0 days 01:46:22 0 days 01:37:52 0 days 01:37:52  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "qualifying.loc[qualifying['constructorId'] == 1].head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>resultId</th>\n",
+       "      <th>raceId</th>\n",
+       "      <th>driverId</th>\n",
+       "      <th>constructorId</th>\n",
+       "      <th>gridStart</th>\n",
+       "      <th>position</th>\n",
+       "      <th>positionText</th>\n",
+       "      <th>positionOrder</th>\n",
+       "      <th>pointsGained</th>\n",
+       "      <th>laps</th>\n",
+       "      <th>...</th>\n",
+       "      <th>previousRacePosition</th>\n",
+       "      <th>status</th>\n",
+       "      <th>finished</th>\n",
+       "      <th>racesWon</th>\n",
+       "      <th>racesRetired</th>\n",
+       "      <th>racesFinished</th>\n",
+       "      <th>polePositions</th>\n",
+       "      <th>racesWonByConstructor</th>\n",
+       "      <th>racesRetiredByConstructor</th>\n",
+       "      <th>percentageOfBestQuali</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>58</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Finished</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>152.0</td>\n",
+       "      <td>391.0</td>\n",
+       "      <td>101.302932</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>27</td>\n",
+       "      <td>19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>56</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Finished</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>153.0</td>\n",
+       "      <td>391.0</td>\n",
+       "      <td>106.877193</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>57</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>56</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>+1 Lap</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>153.0</td>\n",
+       "      <td>391.0</td>\n",
+       "      <td>104.168884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>69</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>66</td>\n",
+       "      <td>...</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Finished</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>153.0</td>\n",
+       "      <td>391.0</td>\n",
+       "      <td>102.179670</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>90</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>58</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Finished</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>153.0</td>\n",
+       "      <td>392.0</td>\n",
+       "      <td>102.725528</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 50 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   resultId  raceId  driverId  constructorId  gridStart position positionText  \\\n",
+       "0         1      18         1              1          1        1            1   \n",
+       "1        27      19         1              1          9        5            5   \n",
+       "2        57      20         1              1          3       13           13   \n",
+       "3        69      21         1              1          5        3            3   \n",
+       "4        90      22         1              1          3        2            2   \n",
+       "\n",
+       "   positionOrder  pointsGained  laps  ... previousRacePosition    status  \\\n",
+       "0              1          10.0    58  ...                  NaN  Finished   \n",
+       "1              5           4.0    56  ...                    1  Finished   \n",
+       "2             13           0.0    56  ...                    5    +1 Lap   \n",
+       "3              3           6.0    66  ...                   13  Finished   \n",
+       "4              2           8.0    58  ...                    3  Finished   \n",
+       "\n",
+       "  finished racesWon racesRetired racesFinished  polePositions  \\\n",
+       "0     True      0.0          1.0          16.0            0.0   \n",
+       "1     True      0.0          1.0          17.0            0.0   \n",
+       "2     True      0.0          1.0          18.0            0.0   \n",
+       "3     True      0.0          1.0          19.0            0.0   \n",
+       "4     True      0.0          1.0          20.0            0.0   \n",
+       "\n",
+       "  racesWonByConstructor racesRetiredByConstructor  percentageOfBestQuali  \n",
+       "0                 152.0                     391.0             101.302932  \n",
+       "1                 153.0                     391.0             106.877193  \n",
+       "2                 153.0                     391.0             104.168884  \n",
+       "3                 153.0                     391.0             102.179670  \n",
+       "4                 153.0                     392.0             102.725528  \n",
+       "\n",
+       "[5 rows x 50 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,8 +673,25 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "5675cb18eb1443b8369002c5f545df601e18a8d4e2c974b1cb42f0d4601b5184"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.7 64-bit ('machine-learning': conda)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
