--- a/notebooks/01-initial-exploration.ipynb
+++ b/notebooks/01-initial-exploration.ipynb
@@ -54,7 +54,57 @@
        "2       1985-01-07\n",
        "3       1985-01-07\n",
        "4       1985-01-07\n",
+       "5       1985-01-07\n",
+       "6       1985-01-07\n",
+       "7       1985-01-07\n",
+       "8       1985-01-07\n",
+       "9       1985-01-07\n",
+       "10      1985-01-07\n",
+       "11      1985-01-07\n",
+       "12      1985-01-07\n",
+       "13      1985-01-07\n",
+       "14      1985-01-07\n",
+       "15      1985-01-07\n",
+       "16      1985-01-07\n",
+       "17      1985-01-07\n",
+       "18      1985-01-07\n",
+       "19      1985-01-07\n",
+       "20      1985-01-07\n",
+       "21      1985-01-07\n",
+       "22      1985-01-07\n",
+       "23      1985-01-07\n",
+       "24      1985-01-07\n",
+       "25      1985-01-07\n",
+       "26      1985-01-07\n",
+       "27      1985-01-07\n",
+       "28      1985-01-07\n",
+       "29      1985-01-07\n",
        "           ...    \n",
+       "25330   1999-03-22\n",
+       "25331   1999-03-22\n",
+       "25332   1999-03-22\n",
+       "25333   1999-03-22\n",
+       "25334   1999-03-22\n",
+       "25335   1999-03-22\n",
+       "25336   1999-03-22\n",
+       "25337   1999-03-22\n",
+       "25338   1999-03-22\n",
+       "25339   1999-03-22\n",
+       "25340   1999-03-02\n",
+       "25341   1999-03-02\n",
+       "25342   1999-03-02\n",
+       "25343   1999-03-02\n",
+       "25344   1999-03-02\n",
+       "25345   1999-03-02\n",
+       "25346   1999-03-02\n",
+       "25347   1999-03-02\n",
+       "25348   1999-03-02\n",
+       "25349   1999-03-02\n",
+       "25350   1999-03-02\n",
+       "25351   1999-03-02\n",
+       "25352   1999-03-02\n",
+       "25353   1999-03-02\n",
+       "25354   1999-03-02\n",
        "25355   1999-03-02\n",
        "25356   1999-03-02\n",
        "25357   1999-03-02\n",
@@ -221,7 +271,16 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Eigenaar\\AppData\\Local\\Programs\\Python\\Python36\\lib\\site-packages\\pandas\\core\\ops.py:1649: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "  result = method(y)\n"
+     ]
+    }
+   ],
    "source": [
     "#Get all historic features up until current row date\n",
     "for date in df.date.unique():\n",
@@ -271,22 +330,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/ww/g01k38ln5rx5dm_b_qtwpdkc0000gn/T/ipykernel_14952/3250733558.py:2: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
-      "  qualifying['q1'] = qualifying['q1'].str.replace('.',':')\n",
-      "/var/folders/ww/g01k38ln5rx5dm_b_qtwpdkc0000gn/T/ipykernel_14952/3250733558.py:3: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
-      "  qualifying['q2'] = qualifying['q2'].str.replace('.',':')\n",
-      "/var/folders/ww/g01k38ln5rx5dm_b_qtwpdkc0000gn/T/ipykernel_14952/3250733558.py:4: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
-      "  qualifying['q3'] = qualifying['q3'].str.replace('.',':')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Formating qualifying times\n",
     "qualifying['q1'] = qualifying['q1'].str.replace('.',':')\n",
@@ -300,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -360,10 +406,10 @@
        "      <td>1</td>\n",
        "      <td>22</td>\n",
        "      <td>1</td>\n",
-       "      <td>0 days 01:35:32</td>\n",
-       "      <td>0 days 01:28:07</td>\n",
-       "      <td>0 days 01:37:54</td>\n",
-       "      <td>0 days 01:28:07</td>\n",
+       "      <td>01:35:32</td>\n",
+       "      <td>01:28:07</td>\n",
+       "      <td>01:37:54</td>\n",
+       "      <td>01:28:07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -373,10 +419,10 @@
        "      <td>1</td>\n",
        "      <td>23</td>\n",
        "      <td>3</td>\n",
-       "      <td>0 days 01:36:04</td>\n",
-       "      <td>0 days 01:32:32</td>\n",
-       "      <td>0 days 01:28:19</td>\n",
-       "      <td>0 days 01:28:19</td>\n",
+       "      <td>01:36:04</td>\n",
+       "      <td>01:32:32</td>\n",
+       "      <td>01:28:19</td>\n",
+       "      <td>01:28:19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
@@ -386,10 +432,10 @@
        "      <td>1</td>\n",
        "      <td>23</td>\n",
        "      <td>3</td>\n",
-       "      <td>0 days 01:38:47</td>\n",
-       "      <td>0 days 01:46:39</td>\n",
-       "      <td>0 days 01:46:13</td>\n",
-       "      <td>0 days 01:38:47</td>\n",
+       "      <td>01:38:47</td>\n",
+       "      <td>01:46:39</td>\n",
+       "      <td>01:46:13</td>\n",
+       "      <td>01:38:47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
@@ -399,10 +445,10 @@
        "      <td>1</td>\n",
        "      <td>22</td>\n",
        "      <td>4</td>\n",
-       "      <td>0 days 01:41:32</td>\n",
-       "      <td>0 days 01:44:27</td>\n",
-       "      <td>0 days 01:47:49</td>\n",
-       "      <td>0 days 01:41:32</td>\n",
+       "      <td>01:41:32</td>\n",
+       "      <td>01:44:27</td>\n",
+       "      <td>01:47:49</td>\n",
+       "      <td>01:41:32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>46</th>\n",
@@ -412,32 +458,32 @@
        "      <td>1</td>\n",
        "      <td>22</td>\n",
        "      <td>3</td>\n",
-       "      <td>0 days 01:44:30</td>\n",
-       "      <td>0 days 01:46:22</td>\n",
-       "      <td>0 days 01:37:52</td>\n",
-       "      <td>0 days 01:37:52</td>\n",
+       "      <td>01:44:30</td>\n",
+       "      <td>01:46:22</td>\n",
+       "      <td>01:37:52</td>\n",
+       "      <td>01:37:52</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    qualifyId  raceId  driverId  constructorId  number  position  \\\n",
-       "0           1      18         1              1      22         1   \n",
-       "2           3      18         5              1      23         3   \n",
-       "24         25      19         5              1      23         3   \n",
-       "25         26      19         1              1      22         4   \n",
-       "46         47      20         1              1      22         3   \n",
+       "    qualifyId  raceId  driverId  constructorId  number  position       q1  \\\n",
+       "0           1      18         1              1      22         1 01:35:32   \n",
+       "2           3      18         5              1      23         3 01:36:04   \n",
+       "24         25      19         5              1      23         3 01:38:47   \n",
+       "25         26      19         1              1      22         4 01:41:32   \n",
+       "46         47      20         1              1      22         3 01:44:30   \n",
        "\n",
-       "                q1              q2              q3         bestLap  \n",
-       "0  0 days 01:35:32 0 days 01:28:07 0 days 01:37:54 0 days 01:28:07  \n",
-       "2  0 days 01:36:04 0 days 01:32:32 0 days 01:28:19 0 days 01:28:19  \n",
-       "24 0 days 01:38:47 0 days 01:46:39 0 days 01:46:13 0 days 01:38:47  \n",
-       "25 0 days 01:41:32 0 days 01:44:27 0 days 01:47:49 0 days 01:41:32  \n",
-       "46 0 days 01:44:30 0 days 01:46:22 0 days 01:37:52 0 days 01:37:52  "
+       "         q2       q3  bestLap  \n",
+       "0  01:28:07 01:37:54 01:28:07  \n",
+       "2  01:32:32 01:28:19 01:28:19  \n",
+       "24 01:46:39 01:46:13 01:38:47  \n",
+       "25 01:44:27 01:47:49 01:41:32  \n",
+       "46 01:46:22 01:37:52 01:37:52  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +699,7 @@
        "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,12 +710,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv('../data/processed/0.1-initial-exploration.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'summarize'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-29-7a2bb805389f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msummarize\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python36\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5065\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5066\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5067\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5068\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5069\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'summarize'"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.summarize)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -691,7 +766,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.6.8"
   },
   "orig_nbformat": 4
  },
