Bug fix for victories and pole position count

--- a/notebooks/01-initial-exploration.ipynb
+++ b/notebooks/01-initial-exploration.ipynb
@@ -69,7 +69,6 @@
     }
    ],
    "source": [
-    "#results_with_dob_date['ageAtRace'] = pd.to_datetime(results_with_dob_date['date']) - pd.to_datetime(results_with_dob_date['dob'])\n",
     "pd.to_datetime(results_with_dob_date['date'])\n",
     "pd.to_datetime(results_with_dob_date['dob'])"
    ]
@@ -226,7 +225,7 @@
     "#Get all historic features up until current row date\n",
     "for date in df.date.unique():\n",
     "    #Races won by driver\n",
-    "    races_won_by_driver = df[df.date < date].groupby('driverId')['positionText'].apply(lambda x: (x==1).sum()).reset_index(name='racesWon')\n",
+    "    races_won_by_driver = df[df.date < date].groupby('driverId')['positionText'].apply(lambda x: (x=='1').sum()).reset_index(name='racesWon')\n",
     "    races_won_by_driver['date'] = date\n",
     "    dfaux = df[df['date'] == date].copy()\n",
     "    dfaux['racesWon'] = 'to_delete'\n",
@@ -247,7 +246,7 @@
     "    dfaux = dfaux.drop('racesFinished', axis = 1)\n",
     "    df.loc[df['date'] == date, 'racesFinished'] = dfaux.merge(races_finished_by_driver, on=['date','driverId'], how='left')['racesFinished'].values\n",
     "    #Number of pole positions\n",
-    "    pole_positions_by_driver = df[df.date < date].groupby('driverId')['gridStart'].apply(lambda x: (x=='1').sum()).reset_index(name='polePositions')\n",
+    "    pole_positions_by_driver = df[df.date < date].groupby('driverId')['gridStart'].apply(lambda x: (x==1).sum()).reset_index(name='polePositions')\n",
     "    pole_positions_by_driver['date'] = date\n",
     "    dfaux = df[df['date'] == date].copy()\n",
     "    dfaux['polePositions'] = 'to_delete'\n",
@@ -271,22 +270,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/ww/g01k38ln5rx5dm_b_qtwpdkc0000gn/T/ipykernel_14952/3250733558.py:2: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
-      "  qualifying['q1'] = qualifying['q1'].str.replace('.',':')\n",
-      "/var/folders/ww/g01k38ln5rx5dm_b_qtwpdkc0000gn/T/ipykernel_14952/3250733558.py:3: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
-      "  qualifying['q2'] = qualifying['q2'].str.replace('.',':')\n",
-      "/var/folders/ww/g01k38ln5rx5dm_b_qtwpdkc0000gn/T/ipykernel_14952/3250733558.py:4: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
-      "  qualifying['q3'] = qualifying['q3'].str.replace('.',':')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Formating qualifying times\n",
     "qualifying['q1'] = qualifying['q1'].str.replace('.',':')\n",
@@ -300,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +423,7 @@
        "46 0 days 01:44:30 0 days 01:46:22 0 days 01:37:52 0 days 01:37:52  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -512,10 +498,10 @@
        "      <td>NaN</td>\n",
        "      <td>Finished</td>\n",
        "      <td>True</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>16.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>152.0</td>\n",
        "      <td>391.0</td>\n",
        "      <td>101.302932</td>\n",
@@ -536,10 +522,10 @@
        "      <td>1</td>\n",
        "      <td>Finished</td>\n",
        "      <td>True</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>17.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
        "      <td>153.0</td>\n",
        "      <td>391.0</td>\n",
        "      <td>106.877193</td>\n",
@@ -560,10 +546,10 @@
        "      <td>5</td>\n",
        "      <td>+1 Lap</td>\n",
        "      <td>True</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>18.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
        "      <td>153.0</td>\n",
        "      <td>391.0</td>\n",
        "      <td>104.168884</td>\n",
@@ -584,10 +570,10 @@
        "      <td>13</td>\n",
        "      <td>Finished</td>\n",
        "      <td>True</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>19.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
        "      <td>153.0</td>\n",
        "      <td>391.0</td>\n",
        "      <td>102.179670</td>\n",
@@ -608,10 +594,10 @@
        "      <td>3</td>\n",
        "      <td>Finished</td>\n",
        "      <td>True</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>20.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
        "      <td>153.0</td>\n",
        "      <td>392.0</td>\n",
        "      <td>102.725528</td>\n",
@@ -637,11 +623,11 @@
        "4              2           8.0    58  ...                    3  Finished   \n",
        "\n",
        "  finished racesWon racesRetired racesFinished  polePositions  \\\n",
-       "0     True      0.0          1.0          16.0            0.0   \n",
-       "1     True      0.0          1.0          17.0            0.0   \n",
-       "2     True      0.0          1.0          18.0            0.0   \n",
-       "3     True      0.0          1.0          19.0            0.0   \n",
-       "4     True      0.0          1.0          20.0            0.0   \n",
+       "0     True      4.0          1.0          16.0            6.0   \n",
+       "1     True      5.0          1.0          17.0            7.0   \n",
+       "2     True      5.0          1.0          18.0            7.0   \n",
+       "3     True      5.0          1.0          19.0            7.0   \n",
+       "4     True      5.0          1.0          20.0            7.0   \n",
        "\n",
        "  racesWonByConstructor racesRetiredByConstructor  percentageOfBestQuali  \n",
        "0                 152.0                     391.0             101.302932  \n",
@@ -653,7 +639,7 @@
        "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,11 +650,283 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv('../data/processed/0.1-initial-exploration.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>resultId</th>\n",
+       "      <th>raceId</th>\n",
+       "      <th>driverId</th>\n",
+       "      <th>constructorId</th>\n",
+       "      <th>gridStart</th>\n",
+       "      <th>position</th>\n",
+       "      <th>positionText</th>\n",
+       "      <th>positionOrder</th>\n",
+       "      <th>pointsGained</th>\n",
+       "      <th>laps</th>\n",
+       "      <th>...</th>\n",
+       "      <th>previousRacePosition</th>\n",
+       "      <th>status</th>\n",
+       "      <th>finished</th>\n",
+       "      <th>racesWon</th>\n",
+       "      <th>racesRetired</th>\n",
+       "      <th>racesFinished</th>\n",
+       "      <th>polePositions</th>\n",
+       "      <th>racesWonByConstructor</th>\n",
+       "      <th>racesRetiredByConstructor</th>\n",
+       "      <th>percentageOfBestQuali</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>270</th>\n",
+       "      <td>25052</td>\n",
+       "      <td>1056</td>\n",
+       "      <td>1</td>\n",
+       "      <td>131</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>78</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Finished</td>\n",
+       "      <td>True</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>247.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>101.776116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271</th>\n",
+       "      <td>25080</td>\n",
+       "      <td>1057</td>\n",
+       "      <td>1</td>\n",
+       "      <td>131</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15</td>\n",
+       "      <td>15</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Finished</td>\n",
+       "      <td>True</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>248.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>104.561516</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>272</th>\n",
+       "      <td>25087</td>\n",
+       "      <td>1059</td>\n",
+       "      <td>1</td>\n",
+       "      <td>131</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>53</td>\n",
+       "      <td>...</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Finished</td>\n",
+       "      <td>True</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>249.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>103.424281</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>273</th>\n",
+       "      <td>25107</td>\n",
+       "      <td>1058</td>\n",
+       "      <td>1</td>\n",
+       "      <td>131</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>71</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Finished</td>\n",
+       "      <td>True</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>100.825806</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>274</th>\n",
+       "      <td>25129</td>\n",
+       "      <td>1060</td>\n",
+       "      <td>1</td>\n",
+       "      <td>131</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>71</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Finished</td>\n",
+       "      <td>True</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>251.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>100.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>275</th>\n",
+       "      <td>25146</td>\n",
+       "      <td>1061</td>\n",
+       "      <td>1</td>\n",
+       "      <td>131</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>52</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Finished</td>\n",
+       "      <td>True</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>252.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>100.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>276</th>\n",
+       "      <td>25167</td>\n",
+       "      <td>1062</td>\n",
+       "      <td>1</td>\n",
+       "      <td>131</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Finished</td>\n",
+       "      <td>True</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>253.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>119.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>105.603263</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7 rows × 50 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     resultId  raceId  driverId  constructorId  gridStart position  \\\n",
+       "270     25052    1056         1            131          7        7   \n",
+       "271     25080    1057         1            131          2       15   \n",
+       "272     25087    1059         1            131          2        2   \n",
+       "273     25107    1058         1            131          2        2   \n",
+       "274     25129    1060         1            131          4        4   \n",
+       "275     25146    1061         1            131          2        1   \n",
+       "276     25167    1062         1            131          1        2   \n",
+       "\n",
+       "    positionText  positionOrder  pointsGained  laps  ... previousRacePosition  \\\n",
+       "270            7              7           7.0    78  ...                    1   \n",
+       "271           15             15           0.0    51  ...                    7   \n",
+       "272            2              2          18.0    53  ...                   15   \n",
+       "273            2              2          19.0    71  ...                    2   \n",
+       "274            4              4          12.0    71  ...                    2   \n",
+       "275            1              1          27.0    52  ...                    4   \n",
+       "276            2              2          18.0    70  ...                    1   \n",
+       "\n",
+       "       status finished racesWon racesRetired racesFinished  polePositions  \\\n",
+       "270  Finished     True     98.0         23.0         247.0          100.0   \n",
+       "271  Finished     True     98.0         23.0         248.0          100.0   \n",
+       "272  Finished     True     98.0         23.0         249.0          100.0   \n",
+       "273  Finished     True     98.0         23.0         250.0          100.0   \n",
+       "274  Finished     True     98.0         23.0         251.0          100.0   \n",
+       "275  Finished     True     98.0         23.0         252.0          100.0   \n",
+       "276  Finished     True     99.0         23.0         253.0          100.0   \n",
+       "\n",
+       "    racesWonByConstructor racesRetiredByConstructor  percentageOfBestQuali  \n",
+       "270                 118.0                      57.0             101.776116  \n",
+       "271                 118.0                      58.0             104.561516  \n",
+       "272                 118.0                      58.0             103.424281  \n",
+       "273                 118.0                      58.0             100.825806  \n",
+       "274                 118.0                      58.0             100.000000  \n",
+       "275                 118.0                      58.0             100.000000  \n",
+       "276                 119.0                      58.0             105.603263  \n",
+       "\n",
+       "[7 rows x 50 columns]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['polePositions'] == 100]"
    ]
   }
  ],
