Clean up notebook

--- a/notebooks/01-initial-exploration.ipynb
+++ b/notebooks/01-initial-exploration.ipynb
@@ -2,18 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "from tqdm import tqdm"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Import all csvs and store into seppareta dataframes**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,18 +39,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "result_with_dob = results.merge(drivers, left_on='driverId', right_on='driverId')\n",
-    "results_with_dob_date = result_with_dob.merge(races, on = 'raceId', how = 'left')"
+    "**Merge results with drivers**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -64,33 +67,48 @@
        "Name: dob, Length: 25360, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "result_with_dob = results.merge(drivers, left_on='driverId', right_on='driverId')\n",
+    "results_with_dob_date = result_with_dob.merge(races, on = 'raceId', how = 'left')\n",
     "pd.to_datetime(results_with_dob_date['date'])\n",
     "pd.to_datetime(results_with_dob_date['dob'])"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Calculate age at race in days (timedelta)\n",
-    "results_with_dob_date['ageAtRace'] = results_with_dob_date['date'] - results_with_dob_date['dob']"
+    "**Calculate age at race in days (timedelta)**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Calculate how many days in f1 in days (timedelta)\n",
+    "results_with_dob_date['ageAtRace'] = results_with_dob_date['date'] - results_with_dob_date['dob']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Calculate how many days in f1 in days (timedelta)**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "date_of_debut = results_with_dob_date.groupby('driverId')['date'].min().to_frame()\n",
     "date_of_debut = date_of_debut.merge(drivers, on = 'driverId', how = 'left').rename(columns={'date':'date_of_debut'})\n",
     "date_of_debut = date_of_debut[['driverId','date_of_debut']]\n",
@@ -101,69 +119,87 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Drop and rename columns**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Drop columns\n",
     "df = df.drop(columns=['number_y', 'number_x', 'code', 'forename', 'surname', 'dob', 'url_x', 'time_y', 'url_y'])\n",
-    "\n",
-    "#Rename Columns\n",
     "df = df.rename(columns={\"grid\": \"gridStart\", \"name\": \"circuitName\", \"date_of_debut\" : \"dateOfDebut\", \"points\": \"pointsGained\"})"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 31,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Add is racing at home feature\n",
-    "df['racingAtHome'] = df.apply(lambda row: row.nationality in row.circuitName, axis=1)"
+    "**Add is racing at home feature**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Convert ages from days to years\n",
+    "df['racingAtHome'] = df.apply(lambda row: row.nationality in row.circuitName, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Convert ages from days to years**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df['ageAtRace'] = df.apply(lambda row: row.ageAtRace / pd.Timedelta('365 days'), axis=1)\n",
     "df['ageAtDebut'] = df.apply(lambda row: row.ageAtDebut / pd.Timedelta('365 days'), axis=1)\n",
     "df['yearsExperience'] = df.apply(lambda row: row.yearsExperience / pd.Timedelta('365 days'), axis=1)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 33,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Add starts in first 2 places on the grid\n",
-    "df['startsFrontRow'] = df['gridStart'] <= 2"
+    "**Merge with driver standings**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Merge with driver standings\n",
     "driver_standings = driver_standings.rename(columns={\"points\": \"driverStandingsPoints\", \"position\": \"driverStandingsPosition\", \"wins\" : \"driverStandingsWins\"})\n",
     "driver_standings = driver_standings.drop(columns=['positionText'])\n",
     "df = df.merge(driver_standings, on = ['raceId','driverId'], how = 'left')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Get driver standings information before race**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Get driver standings information before race\n",
     "df['driverStandingsPoints'] = df.groupby(['year','driverId'])['driverStandingsPoints'].shift(fill_value=0)\n",
     "df['driverStandingsPosition'] = df.groupby(['year','driverId'])['driverStandingsPosition'].shift(fill_value=0)\n",
     "df['driverStandingsWins'] = df.groupby(['year','driverId'])['driverStandingsWins'].shift(fill_value=0)\n",
@@ -171,65 +207,95 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Merge with constructor standings**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Merge with constructor standings\n",
     "constructor_standings = constructor_standings.rename(columns={\"points\": \"constructorStandingsPoints\", \"position\": \"constructorStandingsPosition\", \"wins\" : \"constructorStandingsWins\"})\n",
     "constructor_standings = constructor_standings.drop(columns=['positionText'])\n",
     "df = df.merge(constructor_standings, on = ['raceId','constructorId'], how = 'left')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Get constructor standings information before race**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Get constructor standings information before race\n",
     "df['constructorStandingsPoints'] = df.groupby(['year','driverId'])['constructorStandingsPoints'].shift(fill_value=0)\n",
     "df['constructorStandingsPosition'] = df.groupby(['year','driverId'])['constructorStandingsPosition'].shift(fill_value=0)\n",
     "df['constructorStandingsWins'] = df.groupby(['year','driverId'])['constructorStandingsWins'].shift(fill_value=0)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Get previous race grid and final race positions**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Get previous race grid and final race positions\n",
     "df['previousRaceGridStart'] = df.groupby(['year','driverId'])['gridStart'].shift()\n",
     "df['previousRacePosition'] = df.groupby(['year','driverId'])['positionText'].shift()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 39,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Add status for each row\n",
-    "df = df.merge(status, on = ['statusId'], how = 'left')"
+    "**Add status for each row**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.merge(status, on = ['statusId'], how = 'left')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Get all historic features up until current row date**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1055/1055 [02:54<00:00,  6.03it/s]\n"
+      "100%|██████████| 1055/1055 [02:59<00:00,  5.86it/s]\n"
      ]
     }
    ],
    "source": [
-    "#Get all historic features up until current row date\n",
     "for date in tqdm(df.date.unique()):\n",
     "    #Races won by driver\n",
     "    races_won_by_driver = df[df.date < date].groupby('driverId')['positionText'].apply(lambda x: (x=='1').sum()).reset_index(name='racesWon')\n",
@@ -238,6 +304,7 @@
     "    dfaux['racesWon'] = 'to_delete'\n",
     "    dfaux = dfaux.drop('racesWon', axis = 1)\n",
     "    df.loc[df['date'] == date, 'racesWon'] = dfaux.merge(races_won_by_driver, on=['date','driverId'], how='left')['racesWon'].values\n",
+    "    \n",
     "    #Number of races retired\n",
     "    races_retired_by_driver = df[df.date < date].groupby('driverId')['positionText'].apply(lambda x: (x=='R').sum()).reset_index(name='racesRetired')\n",
     "    races_retired_by_driver['date'] = date\n",
@@ -245,6 +312,7 @@
     "    dfaux['racesRetired'] = 'to_delete'\n",
     "    dfaux = dfaux.drop('racesRetired', axis = 1)\n",
     "    df.loc[df['date'] == date, 'racesRetired'] = dfaux.merge(races_retired_by_driver, on=['date','driverId'], how='left')['racesRetired'].values\n",
+    "\n",
     "    #Number of races finished\n",
     "    races_finished_by_driver = df[df.date < date].groupby('driverId')['status'].apply(lambda x: (x=='Finished').sum()).reset_index(name='racesFinished')\n",
     "    races_finished_by_driver['date'] = date\n",
@@ -252,6 +320,7 @@
     "    dfaux['racesFinished'] = 'to_delete'\n",
     "    dfaux = dfaux.drop('racesFinished', axis = 1)\n",
     "    df.loc[df['date'] == date, 'racesFinished'] = dfaux.merge(races_finished_by_driver, on=['date','driverId'], how='left')['racesFinished'].values\n",
+    "\n",
     "    #Number of pole positions\n",
     "    pole_positions_by_driver = df[df.date < date].groupby('driverId')['gridStart'].apply(lambda x: (x==1).sum()).reset_index(name='polePositions')\n",
     "    pole_positions_by_driver['date'] = date\n",
@@ -259,6 +328,7 @@
     "    dfaux['polePositions'] = 'to_delete'\n",
     "    dfaux = dfaux.drop('polePositions', axis = 1)\n",
     "    df.loc[df['date'] == date, 'polePositions'] = dfaux.merge(pole_positions_by_driver, on=['date','driverId'], how='left')['polePositions'].values\n",
+    "\n",
     "    #Constructors races won\n",
     "    races_won_by_constructor = df[df.date < date].groupby('constructorId')['positionText'].apply(lambda x: (x=='1').sum()).reset_index(name='racesWonByConstructor')\n",
     "    races_won_by_constructor['date'] = date\n",
@@ -266,6 +336,7 @@
     "    dfaux['racesWonByConstructor'] = 'to_delete'\n",
     "    dfaux = dfaux.drop('racesWonByConstructor', axis = 1)\n",
     "    df.loc[df['date'] == date, 'racesWonByConstructor'] = dfaux.merge(races_won_by_constructor, on=['date','constructorId'], how='left')['racesWonByConstructor'].values\n",
+    "\n",
     "    #Constructor times retired\n",
     "    races_retired_by_constructor = df[df.date < date].groupby('constructorId')['positionText'].apply(lambda x: (x=='R').sum()).reset_index(name='racesRetiredByConstructor')\n",
     "    races_retired_by_constructor['date'] = date\n",
@@ -276,28 +347,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 41,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Formating qualifying times\n",
-    "qualifying['q1'] = qualifying['q1'].str.replace('.',':')\n",
-    "qualifying['q2'] = qualifying['q2'].str.replace('.',':')\n",
-    "qualifying['q3'] = qualifying['q3'].str.replace('.',':')\n",
-    "\n",
-    "qualifying[['q1', 'q2', 'q3']] = qualifying[['q1', 'q2', 'q3']].applymap(lambda x: pd.to_timedelta(x, errors='coerce'))\n",
-    "\n",
-    "qualifying['bestLap'] = qualifying[['q1','q2','q3']].min(axis=1)"
+    "**Format qualifying times**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Percent diference between drivers qualifying time and best time \n",
+    "qualifying['q1'] = qualifying['q1'].str.replace('.',':')\n",
+    "qualifying['q2'] = qualifying['q2'].str.replace('.',':')\n",
+    "qualifying['q3'] = qualifying['q3'].str.replace('.',':')\n",
+    "qualifying[['q1', 'q2', 'q3']] = qualifying[['q1', 'q2', 'q3']].applymap(lambda x: pd.to_timedelta(x, errors='coerce'))\n",
+    "qualifying['bestLap'] = qualifying[['q1','q2','q3']].min(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Calculate percent diference between drivers qualifying time and best time**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "quali_aux = pd.merge(df[['raceId','driverId']], qualifying[['bestLap','raceId','driverId']], on = ['raceId','driverId'], how = 'left')\n",
     "quali_aux_best = quali_aux.groupby(['raceId'], as_index=False)['bestLap'].min()\n",
     "df = df.merge(quali_aux, on = ['raceId','driverId'], how = 'left')\n",
@@ -307,8 +388,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Save final dataframe**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +724,7 @@
        "[8 rows x 26 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
