--- a/notebooks/02-data-vizualization.ipynb
+++ b/notebooks/02-data-vizualization.ipynb
@@ -52,61 +52,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.rename(columns={'rank': 'fastest_lap_rank', 'name_x': 'gp_name', 'nationality_x': 'driver_nationality', 'name_y': 'constructor_name', 'nationality_y': 'constructor_nationality', 'driver_ref': 'driver'}, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.sort_values(by=['year', 'round','positionOrder'], ascending = [False, True, True])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df.rename(columns={'rank': 'fastest_lap_rank', 'name_x': 'gp_name', 'nationality_x': 'driver_nationality', 'name_y': 'constructor_name', 'nationality_y': 'constructor_nationality', 'driver_ref': 'driver'}, inplace=True)\n",
+    "df = df.sort_values(by=['year', 'round','positionOrder'], ascending = [False, True, True])\n",
     "df.reset_index(drop = True, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0        2021\n",
-       "1        2021\n",
-       "2        2021\n",
-       "3        2021\n",
-       "4        2021\n",
-       "         ... \n",
-       "25355    1950\n",
-       "25356    1950\n",
-       "25357    1950\n",
-       "25358    1950\n",
-       "25359    1950\n",
-       "Name: year, Length: 25360, dtype: int64"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.year"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
