--- a/notebooks/01-initial-exploration.ipynb
+++ b/notebooks/01-initial-exploration.ipynb
@@ -677,7 +677,7 @@
    "hash": "5675cb18eb1443b8369002c5f545df601e18a8d4e2c974b1cb42f0d4601b5184"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit ('machine-learning': conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -692,8 +692,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
