Update processed csv

--- a/notebooks/01-feature-extraction.ipynb
+++ b/notebooks/01-feature-extraction.ipynb
@@ -59,12 +59,12 @@
        "3       1985-01-07\n",
        "4       1985-01-07\n",
        "           ...    \n",
-       "25355   1999-03-02\n",
-       "25356   1999-03-02\n",
-       "25357   1999-03-02\n",
-       "25358   1999-03-02\n",
-       "25359   1999-03-02\n",
-       "Name: dob, Length: 25360, dtype: datetime64[ns]"
+       "25394   1999-03-02\n",
+       "25395   1999-03-02\n",
+       "25396   1999-03-02\n",
+       "25397   1999-03-02\n",
+       "25398   1999-03-02\n",
+       "Name: dob, Length: 25399, dtype: datetime64[ns]"
       ]
      },
      "execution_count": 3,
@@ -291,7 +291,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1055/1055 [03:17<00:00,  5.35it/s]\n"
+      "100%|██████████| 1057/1057 [03:14<00:00,  5.43it/s]\n"
      ]
     }
    ],
@@ -357,7 +357,20 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/ww/g01k38ln5rx5dm_b_qtwpdkc0000gn/T/ipykernel_48205/2789282988.py:1: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "  qualifying['q1'] = qualifying['q1'].str.replace('.',':')\n",
+      "/var/folders/ww/g01k38ln5rx5dm_b_qtwpdkc0000gn/T/ipykernel_48205/2789282988.py:2: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "  qualifying['q2'] = qualifying['q2'].str.replace('.',':')\n",
+      "/var/folders/ww/g01k38ln5rx5dm_b_qtwpdkc0000gn/T/ipykernel_48205/2789282988.py:3: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "  qualifying['q3'] = qualifying['q3'].str.replace('.',':')\n"
+     ]
+    }
+   ],
    "source": [
     "qualifying['q1'] = qualifying['q1'].str.replace('.',':')\n",
     "qualifying['q2'] = qualifying['q2'].str.replace('.',':')\n",
